--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $white;
+	background: pink;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -34,6 +34,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
   font-weight: bold;
+  
+  h2 {
+  	color: maroon;
+  }
 
   line-height: 1.7;
   margin: 1em 0 15px;
