--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: pink;
+	background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -34,11 +34,6 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
   font-weight: bold;
-  
-  h2 {
-  	color: maroon;
-  }
-
   line-height: 1.7;
   margin: 1em 0 15px;
   padding: 0;
@@ -57,6 +52,7 @@ h1 {
 
 h2 {
   font-size: 24px;
+  color: green;
 }
 
 h3 {
