--- a/style.scss
+++ b/style.scss
@@ -286,3 +286,10 @@ footer {
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
 @import "svg-icons";
+
+//My Custom Styles
+
+.assignments {
+  color: crimson;
+  font-weight: bold;
+}
